[gd_scene load_steps=20 format=3 uid="uid://b8k713ljirnd4"]

[ext_resource type="Script" path="res://player/player.gd" id="1_lmsf7"]
[ext_resource type="Script" path="res://player/label.gd" id="2_twxel"]
[ext_resource type="Texture2D" uid="uid://d24kl3vtfirna" path="res://colored-transparent_packed.png" id="2_vrfrn"]
[ext_resource type="Script" path="res://player/state_machine.gd" id="3_v51dr"]
[ext_resource type="Script" path="res://player/states/ground_state.gd" id="4_v47b7"]
[ext_resource type="Script" path="res://player/states/air_state.gd" id="5_okbcf"]
[ext_resource type="Script" path="res://player/attack_state_machine.gd" id="6_fbl4r"]
[ext_resource type="Script" path="res://player/states/wall_slide_state.gd" id="6_vvy2o"]
[ext_resource type="Script" path="res://player/states/idle_state.gd" id="7_wg7d4"]
[ext_resource type="Script" path="res://player/states/get_hit_state.gd" id="8_3m8i6"]
[ext_resource type="PackedScene" uid="uid://dnf7kegi7l0lv" path="res://components/health_component.tscn" id="10_drnnc"]
[ext_resource type="PackedScene" uid="uid://bfhb3qi75d8tl" path="res://components/hitbox_component.tscn" id="11_b2kpn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5gihe"]
radius = 12.0

[sub_resource type="Animation" id="Animation_tpq5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerBodySprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBodySprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBodySprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qgk68"]
resource_name = "get_hit"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerBodySprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 2.5), Vector2(1.7, 2.3), Vector2(1.5, 2.5), Vector2(1.7, 2.3), Vector2(1.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBodySprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.940031, 0, 0.0374657, 1), Color(1, 1, 1, 1), Color(0.940031, 0, 0.0374657, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBodySprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kfmg1"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerBodySprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.2, 1.8), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBodySprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBodySprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bfrgx"]
resource_name = "jump"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerBodySprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 2.5), Vector2(1.7, 2.3), Vector2(1.5, 2.5), Vector2(1.7, 2.3), Vector2(1.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBodySprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerBodySprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5tmx"]
_data = {
"RESET": SubResource("Animation_tpq5w"),
"get_hit": SubResource("Animation_qgk68"),
"idle": SubResource("Animation_kfmg1"),
"jump": SubResource("Animation_bfrgx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2741a"]
radius = 12.0416

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("get_hit_state", "hitbox_component")]
collision_layer = 2
script = ExtResource("1_lmsf7")
get_hit_state = NodePath("MovementStateMachine/GetHitState")
hitbox_component = NodePath("HitboxComponent")

[node name="InvulnerabilityTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -39.0
offset_right = 20.0
offset_bottom = -16.0
script = ExtResource("2_twxel")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5gihe")

[node name="PlayerBodySprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_vrfrn")
hframes = 49
vframes = 22
frame = 676

[node name="PlayerAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v5tmx")
}

[node name="MovementStateMachine" type="Node" parent="."]
script = ExtResource("3_v51dr")

[node name="GroundState" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("air_state")]
script = ExtResource("4_v47b7")
air_state = NodePath("../AirState")

[node name="AirState" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("ground_state", "wall_slide_state")]
script = ExtResource("5_okbcf")
ground_state = NodePath("../GroundState")
wall_slide_state = NodePath("../WallSlideState")

[node name="WallJumpTimer" type="Timer" parent="MovementStateMachine/AirState"]
wait_time = 0.5
one_shot = true

[node name="NormalJumpTimer" type="Timer" parent="MovementStateMachine/AirState"]

[node name="WallSlideState" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("ground_state", "air_state")]
script = ExtResource("6_vvy2o")
ground_state = NodePath("../GroundState")
air_state = NodePath("../AirState")

[node name="GetHitState" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("air_state", "ground_state", "wall_slide_state")]
script = ExtResource("8_3m8i6")
air_state = NodePath("../AirState")
ground_state = NodePath("../GroundState")
wall_slide_state = NodePath("../WallSlideState")

[node name="GetHitTimer" type="Timer" parent="MovementStateMachine/GetHitState"]

[node name="AttackStateMachine" type="Node" parent="."]
script = ExtResource("6_fbl4r")

[node name="IdleState" type="Node" parent="AttackStateMachine"]
script = ExtResource("7_wg7d4")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("10_drnnc")]
entity = NodePath("..")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("entity") groups=["player_hitbox"] instance=ExtResource("11_b2kpn")]
collision_layer = 2
collision_mask = 0
monitoring = false
entity = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_2741a")
